style(footer__sm): fix whitespace
This commit is to resolve the rendering issue in the footer block.

The change will ensure that there will enough space at the bottom of
the footer block for it to render well on sm devices and window or
screen sizes.

--- a/style.css
+++ b/style.css
@@ -1405,7 +1405,8 @@ vertical-align: top;
   display: grid;
   grid-template-columns: 1fr;
   justify-items: center;  
-  font-size:1.8rem
+  font-size:1.8rem;
+  padding-bottom:18%;
 }
 
 .footer__info-block {
